<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="false"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progress_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/score"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/initial_score"
        android:padding="10dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:id="@+id/question_text_view"
        android:gravity="center"
        android:padding="22dp"
        android:text="@string/question_1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="31sp" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_above="@id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/true_button"
            android:text="@string/true_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/yellow"
            android:textSize="20sp" />


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/false_button"
            android:text="@string/false_button"
            android:background="@color/expense_ammount_color"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

</RelativeLayout>