<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="2dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_photoListTv"
            android:layout_width="100dp"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="130dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="22dp"
                android:text="@string/jurusan"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_grade"/>

                <TextView
                    android:id="@+id/tv_rateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/graduate"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16sp"
                    android:layout_height="18sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_school" />

                <TextView
                    android:id="@+id/tv_dateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/school_engineering"
                    android:textColor="@color/grey"
                    android:textSize="13sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>