<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster_banner_tv"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:background="@drawable/tau_campus"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:tint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />

        <ImageButton
            android:id="@+id/btn_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/ripple_back_bg"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/poster_banner_tv"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardviewPosterDetail_tv"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="138dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/poster_banner_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/poster_banner_tv"
            app:layout_constraintTop_toTopOf="@+id/poster_banner_tv"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/poster_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                tools:src="@android:color/darker_gray" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_title_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardviewPosterDetail_tv"
            app:layout_constraintTop_toBottomOf="@+id/poster_banner_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="How To Train Your Dragon: The Hidden World" />

        <TextView
            android:id="@+id/textview_graduate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="65dp"
            android:text="@string/graduate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_detail_tv"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toTopOf="@+id/textview_graduate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardviewPosterDetail_tv"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_detail_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_scoreAngkaDetail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/yellow"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView5_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_tv"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_detail_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="75" />



        <TextView
            android:id="@+id/textView5_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/gradient_list"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardviewPosterDetail_tv"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_overviewDetail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind." />

        <ProgressBar
            android:id="@+id/progressBar_detailMovie_tv"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="411dp"
            android:layout_marginTop="311dp"
            android:layout_marginEnd="411dp"
            android:layout_marginBottom="411dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>